--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <input type="checkbox" name="check" id="check">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Project</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/Aboutme.html" target="_blank">About</a></li>
+                <li><a href="/resume.html" target="_blank">Resume</a></li>
+                <li><a href="/portfolio.html" target="_blank">Portfolio</a></li>
+                <li><a href="Project.html" target="_blank">Project</a></li>
+                <li><a href="/Contactme.html" target="_blank">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -56,3 +56,4 @@
 </body>
 
 </html>
+<!-- i have make some change to check for git push -->
